<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">IBB University</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="delete">DELETE</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Campus Map</string>
    <string name="title_activity_forecast">IBBU Forecast</string>
    <string name="title_activity_tests">Tests</string>
    <string name="title_activity_news">Campus News</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>


    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_Satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>

    <string name="homework">Home Work</string>
    <string name="holidays">Holidays</string>
    <string name="test">Test</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_time_table">Time Table</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_notice_board">Notice Board</string>
    <string name="title_activity_people">People Directory</string>
    <string name="title_activity_home_work">Home Work</string>
    <string name="title_activity_start_up">StartUp</string>


    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">lapai</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings for formatting weather-related data -->

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>


    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">com.ibbumobile</string>
    <string name="content_authority">com.ibbumobile</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="title_activity_forecast_detail_actvity">Campus Forecast</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_news_info">Campus Updates</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">News</string>
    <string name="tab_text_2">Notice Board</string>
    <string name="tab_text_3">Events</string>
    <string name="title_activity_calculator">calculator</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="calculator">Grade Point Calc</string>
    <string name="title_activity_photos">Photos</string>
    <string name="title_activity_bookmark">BookmarkActivity</string>
    <string name="title_activity_staffs_dir">StaffsDirActivity</string>
    <string name="title_activity_students">Students Directory</string>
    <string name="service_desc">YearBook</string>

</resources>
